<?xml version="1.0"?>
<package format="2">
  <name>moveit_joystick_control</name>
  <version>0.0.1</version>
  <description>The MoveIt! joystick control package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>rospy</depend>
  <depend>moveit_commander</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
